# absurdler

./: Cargo.toml  README.md
src/: benchmark.rs  main.rs  wordler.rs
src/util/: math.rs  mod.rs  words.rs
src/words/: words.py
tests/: test0.rs
