[package]
name = "wordler"
authors = ["Hobbs Bros."]
license = "MIT"
description = "A simple Wordle bot."
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.16.2"

[[bin]]
name = "wordler"
path = "src/wordler.rs"

[lib]
name = "util"
path = "src/util/mod.rs"