[package]
name = "ezwordle"
authors = ["Hobbs Bros."]
license = "MIT"
description = "A simple bot to help you solve the daily Wordle."
repository = "https://github.com/hobbsbros/wordle"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.16.2"

[[bin]]
name = "wordler"
path = "src/wordler.rs"

[lib]
name = "util"
path = "src/util/mod.rs"