[package]
name = "absurdler"
authors = ["Hobbs Bros."]
license = "MIT"
description = "A simple bot to help you solve Absurdle, a variant of NYT's Wordle."
repository = "https://github.com/hobbsbros/absurdler"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.16.2"

[[bin]]
name = "absurdler"
path = "src/wordler.rs"

[lib]
name = "util"
path = "src/util/mod.rs"